Bug 315922 - Graticule grid looks distorted in spherical projection when globe is focused on "Al Wakrah" and whole globe is visible
Summary: Graticule grid looks distorted in spherical projection when globe is focused ...
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-28 20:38 UTC by Bernhard Beschow
Modified: 2015-04-02 10:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot showing the problem (465.17 KB, image/png)
2015-04-02 10:03 UTC, Bernhard Beschow
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2013-02-28 20:38:42 UTC
The top white circle of the coordinate grid looks distorted when the globe is
* in spherical projection
* focused on "Al Wakrah"
* almost wholy visible.

Reproducible: Always

Steps to Reproduce:
1. Make sure the coordinate grid is visible
2. Select spherical projection
3. Focus on "Al Wakrah"
4. Make the whole globe visible
Actual Results:  
The top white circle looks distorted where it should be covered by the globe.

Expected Results:  
The top white circle should be invisible where it is covered by the globe.

The problem is that the "globeHidesPoint" variable in AbstractProjectionPrivate::crossDateLine() doesn't cause the current QPolygonF to be split.
Comment 1 Bernhard Beschow 2013-04-27 18:51:59 UTC
Git commit 3afa413bea36ff0a86b9452daa970742aa39760d by Bernhard Beschow.
Committed on 27/02/2013 at 20:50.
Pushed by beschow into branch 'master'.

split polygon when tessellated points are hidden
REVIEW: 110195

M  +7    -0    src/lib/Projections/AbstractProjection.cpp
M  +23   -0    tests/ViewportParamsTest.cpp

http://commits.kde.org/marble/3afa413bea36ff0a86b9452daa970742aa39760d
Comment 2 Bernhard Beschow 2015-04-02 10:03:13 UTC
Created attachment 91853 [details]
screenshot showing the problem

Screenshot. The visual bug is marked with a red ellipsis.