split polygon when tessellated points are hidden

BUG: 315922
REVIEW: 110195